# vite-plugin-i18n-version

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml  release.yml
crates/i18n_version_core/: Cargo.toml  package.json
crates/i18n_version_core/.cargo/: config.toml
crates/i18n_version_core/src/: error.rs  hash.rs  lib.rs  scanner.rs
crates/json_version_core/: Cargo.toml  package.json
crates/json_version_core/src/: scanner.rs
docs/superpowers/plans/: 2026-07-07-vite-plugin-i18n-version.md
docs/superpowers/specs/: 2026-07-07-i18n-version-vite-plugin-design.md
