[package]
name = "i18n_version_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"