[package]
name = "i18n_version_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
thiserror = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true